# orisign

./: .gitignore  README.md  package.json  turbo.json
.github/: dependabot.yml
apps/auth-service/: package.json  prettier.config.mjs
apps/auth-service/prisma/: schema.prisma
apps/auth-service/src/: app.module.ts  main.ts
apps/bot-service/: README.md  docker-compose.yml  package.json
apps/bot-service/prisma/: schema.prisma
apps/bot-service/src/: app.module.ts  main.delivery.ts  main.dispatcher.ts  main.ts  main.worker.ts
apps/call-service/: package.json
apps/call-service/src/: app.module.ts  main.ts
apps/conversation-service/: README.md  package.json
apps/gateway-service/: .prettierrc  package.json
apps/handle-service/: jest.config.ts  package.json
apps/media-service/: README.md  go.mod  go.sum  main.go
apps/message-service/: README.md  package.json
apps/notification-service/: package.json  prettier.config.mjs
apps/users-service/: package.json  tsconfig.json
apps/web/: .gitignore  crowdin.yml  next.config.ts  orval.config.ts  package.json  proxy.ts
apps/web/api/: generated.ts
docker/: docker-compose.yml
sdks/python/orisign-bot-sdk/: README.md  pyproject.toml
sdks/python/orisign-bot-sdk/examples/: weather_bot.py
sdks/python/orisign-bot-sdk/orisign_bot_sdk/: __init__.py  bot.py  client.py  context.py  errors.py  markup.py  router.py
sdks/python/orisign-bot-sdk/orisign_bot_sdk/models/: __init__.py  types.py
sdks/python/orisign-bot-sdk/orisign_bot_sdk/webhook/: __init__.py  fastapi.py
sdks/python/orisign-bot-sdk/tests/: test_sdk.py
(+335 files in other folders)
