[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orisign-bot-sdk"
version = "0.1.0"
description = "Python SDK for Orisign bot platform"
authors = [{ name = "Orisign" }]
dependencies = ["httpx>=0.27.0", "pydantic>=2.7.0"]

[project.optional-dependencies]
webhook = ["fastapi>=0.115.0"]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[tool.setuptools.packages.find]
include = ["orisign_bot_sdk*"]
